--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -87,7 +87,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2505.10072"
+                <a href="https://arxiv.org/abs/2407.04231"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -97,7 +97,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/RuiyangJu/ToonifyGB"
+                <a href="https://github.com/RuiyangJu/Efficient_Document_Image_Binarization"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
