--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -78,7 +78,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="pdf\ToonifyGB.pdf"
+                <a href="pdf\MFE-GAN.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
