--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -132,8 +132,8 @@
         <div class="content has-text-centered">
           <img src="./images/intro.png" class="center" style="width: 80%;">
           <h5 class="subtitle has-text-centered" style="margin-top: 15px">
-            We propose an efficient two-stage framework that employs an improved StyleGAN to generate stylized head videos from input video frames and synthesize the corresponding 3D avatars using Gaussian blendshapes. 
-            Our method supports real-time synthesis of stylized avatar animations in styles such as Arcane and Pixar.
+            <strong>Graphs (top) and table (bottom)</strong> compare the average-score metric (ASM) with respect to total training and inference times, measured on the Benchmark dataset using NVIDIA GeForce RTX 4090 GPUs.
+            MFE-GAN, using U-Net &amp; EfficientNetV2-S as the generator, trains 16%–79% faster than the compared methods, while inference time is reduced by 17%–35%.
           </h5>
         </div>
         <h2 class="title is-3" style="margin-top: 2em;">Abstract</h2>
