--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -139,14 +139,13 @@
         <h2 class="title is-3" style="margin-top: 2em;">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-          The introduction of 3D Gaussian blendshapes has enabled the real-time reconstruction of animatable head avatars from monocular video. 
-          Toonify, a StyleGAN-based method, has become widely used for facial image stylization.
-          To extend Toonify for synthesizing diverse stylized 3D head avatars using Gaussian blendshapes, we propose an efficient two-stage framework, ToonifyGB.
-          In Stage 1 (stylized video generation), we adopt an improved StyleGAN to generate the stylized video from the input video frames, which overcomes the limitation of cropping aligned faces at a fixed resolution as preprocessing for normal StyleGAN.
-          This process provides a more stable stylized video, which enables Gaussian blendshapes to better capture the high-frequency details of the video frames, facilitating the synthesis of high-quality animations in the next stage.
-          In Stage 2 (Gaussian blendshapes synthesis), our method learns a stylized neutral head model and a set of expression blendshapes from the generated stylized video.
-          By combining the neutral head model with expression blendshapes, ToonifyGB can efficiently render stylized avatars with arbitrary expressions. 
-          We validate the effectiveness of ToonifyGB on benchmark datasets using two representative styles: Arcane and Pixar.
+            Document image enhancement and binarization are commonly performed before document analysis and recognition tasks to improve the efficiency and accuracy of techniques such as optical character recognition (OCR).
+            This is because directly recognizing text in degraded documents, particularly in color images, often obtains unsatisfactory results.
+            Training independent generative adversarial networks (GANs) for each color channel can generate images where shadows and noise are effectively removed, which in turn facilitates efficient text information extraction.
+            However, employing multiple GANs for different color channels requires long training and inference times.
+            To reduce both training and inference times of models for document image enhancement and binarization, we propose MFE-GAN, an efficient GAN-based framework with multi-scale feature extraction (MFE), which incorporates Haar wavelet transformation (HWT) and normalization to process document images before feeding them into GANs for training.
+            In addition, we present novel generators, discriminators, and loss functions to improve the model's performance, and conduct ablation studies to demonstrate their effectiveness.
+            Experimental results on the Benchmark, Nabuco, and CMATERdb datasets show that the proposed MFE-GAN significantly reduces both the total training and inference times while maintaining comparable performance in comparison to state-of-the-art methods.
           </p>
         </div>
       </div>
