--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -63,7 +63,7 @@
             <span class="author-block">
               <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
               <a href="https://www.monash.edu.my/it/staff/academic/a-prof-wong-kok-sheik">KokSheik Wong</a>,
-              <a href="https://www.neiljin.site/">Yanlin Jin</a>
+              <a href="https://www.neiljin.site/">Yanlin Jin</a>,
               <a href="https://scholar.google.com/citations?user=vb5-3aQAAAAJ&hl=zh-TW">Jen-Shiun Chiang</a>
             </span>
           </div>
