--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -131,7 +131,7 @@
       <div class="column is-four-fifths">
         <div class="content has-text-centered">
           <img src="./images/intro.png" class="center" style="width: 80%;">
-          <h5 class="subtitle has-text-centered" style="margin-top: 15px">
+          <h5 class="subtitle has-text-justified" style="margin-top: 15px">
           <strong>Graphs (top) and table (bottom)</strong> compare the average-score metric (ASM) with respect to the total training and inference times among [Suh et al. 2022], [Ju et al. 2024], and the proposed MFE-GAN, evaluated on the Benchmark dataset using NVIDIA GeForce RTX 4090 GPUs.
           The proposed MFE-GAN, employing U-Net &amp; EfficientNetV2-S as the generator backbone, achieves 16%–79% faster training and 17%–35% shorter inference times compared to the existing methods.
           </h5>
