--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -130,7 +130,7 @@
       <div class="column is-four-fifths">
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
           <img src="./images/teaser.png">
-          <h5 class="subtitle has-text-centered" style="margin-top: 15px">
+          <h5 class="subtitle has-text-justified" style="margin-top: 15px">
             DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals.
             Based on the dataset, we define two benchmark tracks: (1) Text and Seal Detection, and (2) Document Binarization.
           </h5>
