--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -120,7 +120,7 @@
       <div class="column is-four-fifths">
         <div class="content has-text-centered">
           <img src="./images/teaser.png" class="center" style="width: 80%;">
-          <h5 class="subtitle has-text-centered" style="margin-top: 15px">
+          <h5 class="subtitle has-text-justified" style="margin-top: 15px">
             We propose an efficient two-stage framework that employs an improved StyleGAN to generate stylized head videos from input video frames and synthesize the corresponding 3D avatars using Gaussian blendshapes. 
             Our method supports real-time synthesis of stylized avatar animations in styles such as Arcane and Pixar.
           </h5>
