--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -153,18 +153,19 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3" style="margin-top: 2em;">Live Demo</h2>
+        <h2 class="title is-3" style="margin-top: 2em;">Pipeline</h2>
         <div class="content has-text-justified">
-          <video id="replay-video" controls muted preload playsinline loop style="display: block; margin: 0 auto; width: 80%;">
-            <source src="./video/Live Demo.mp4" type="video/mp4">
-          </video>
+        <img src="./images/framework.png" style="width: 80%; display: block; margin: 0 auto;">
+          <p>
+          We propose MFE-GAN, an efficient GAN-based framework that incorporates a novel multi-scale feature extraction (MFE) module, together with the generator, discriminator, and loss functions.
+          This framework adopts a three-stage architecture: Stage 1 – Document Image Processing, Stage 2 – Document Image Enhancement, and Stage 3 – Document Image Binarization.
         </div>
       </div>
     </div>
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3" style="margin-top: 2em;">Pipeline</h2>
+        <h2 class="title is-3" style="margin-top: 2em;">Dataset</h2>
         <div class="content has-text-justified">
         <img src="./images/pipeline.png" style="width: 80%; display: block; margin: 0 auto;">
           <p>
@@ -173,7 +174,7 @@
         </div>
       </div>
     </div>
-
+    
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Comparison</h2>
