--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -157,8 +157,8 @@
         <div class="content has-text-justified">
         <img src="./images/framework.png" style="width: 80%; display: block; margin: 0 auto;">
           <p>
-          We propose MFE-GAN, an efficient GAN-based framework that incorporates a novel multi-scale feature extraction (MFE) module, together with the generator, discriminator, and loss functions.
-          This framework adopts a three-stage architecture: Stage 1 – Document Image Processing, Stage 2 – Document Image Enhancement, and Stage 3 – Document Image Binarization.
+            We propose MFE-GAN, an efficient GAN-based framework that incorporates a novel multi-scale feature extraction (MFE) module, together with the generator, discriminator, and loss functions.
+            This framework adopts a three-stage architecture: Stage 1 – Document Image Processing, Stage 2 – Document Image Enhancement, and Stage 3 – Document Image Binarization.
         </div>
       </div>
     </div>
@@ -167,9 +167,12 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Dataset</h2>
         <div class="content has-text-justified">
-        <img src="./images/pipeline.png" style="width: 80%; display: block; margin: 0 auto;">
+        <img src="./images/data.png" style="width: 80%; display: block; margin: 0 auto;">
           <p>
-          Our ToonifyGB framework consists of two stages: Stage 1 involves the generation of stylized videos, and Stage 2 focuses on the synthesis of 3D stylized head avatars using Gaussian blendshapes.
+            Examples from the three datasets used in this work: (a) Benchmark, (b) Nabuco, and (c) CMATERdb. 
+            Original images are shown on the left, and their corresponding binarized ground-truth on the right.
+            For Benchmark Dataset, the training set comprises images from DIBCO 2009 (10 images); H-DIBCO 2010 (10 images); H-DIBCO 2012 (14 images); Bickley Diary (7 images); PHIBD (15 images); and SMADI (87 images);
+            and the testing set consists of images from DIBCO 2011 (16 images); DIBCO 2013 (16 images); H-DIBCO 2014 (10 images); H-DIBCO 2016 (10 images); DIBCO 2017 (20 images); H-DIBCO 2018 (10 images); and DIBCO 2019 (20 images).
           </p>
         </div>
       </div>
