--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -153,12 +153,14 @@
 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3" style="margin-top: 2em;">Pipeline</h2>
+        <h2 class="title is-3" style="margin-top: 2em;">Framework</h2>
         <div class="content has-text-justified">
         <img src="./images/framework.png" style="width: 80%; display: block; margin: 0 auto;">
+          <br>
           <p>
             We propose MFE-GAN, an efficient GAN-based framework that incorporates a novel multi-scale feature extraction (MFE) module, together with the generator, discriminator, and loss functions.
             This framework adopts a three-stage architecture: Stage 1 – Document Image Processing, Stage 2 – Document Image Enhancement, and Stage 3 – Document Image Binarization.
+          </p>
         </div>
       </div>
     </div>
@@ -168,6 +170,7 @@
         <h2 class="title is-3" style="margin-top: 2em;">Dataset</h2>
         <div class="content has-text-justified">
         <img src="./images/data.png" style="width: 80%; display: block; margin: 0 auto;">
+          <br>
           <p>
             Examples from the three datasets used in this work: (a) Benchmark, (b) Nabuco, and (c) CMATERdb. 
             Original images are shown on the left, and their corresponding binarized ground-truth on the right.
