--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -208,12 +208,12 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-    @article{ju2025toonifygb,
-      title={ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars},
-      author={Ju, Rui-Yang and Huang, Sheng-Yen and Hung, Yi-Ping},
-      journal={arXiv preprint arXiv:2505.10072},
-      year={2025}
-    }
+      @article{ju2024mfe,
+        title={MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction},
+        author={Ju, Rui-Yang and Wong, KokSheik and Chiang, Jen-Shiun},
+        journal={arXiv preprint arXiv:2407.04231},
+        year={2024}
+      }
     </code></pre>
   </div>
 </section>
