--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -204,6 +204,36 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Reference</h2>
+        <div class="content has-text-justified">
+          <p>
+            [Nagy et al. 2022] Eszter Nagy, Michael Janisch, Franko Hržić, Erich Sorantin, Sebastian Tschauner. 2022.
+            A pediatric wrist trauma X-ray dataset (GRAZPEDWRI-DX) for machine learning. Scientific Data.
+          </p>
+          <p>
+            [Ju et al. 2023] Rui-Yang Ju, Weiming Cai. 2023.
+            Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
+          </p>
+          <p>
+            [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
+            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
+          </p>
+          <p>
+            [Chien et al. 2024] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
+            YOLOv9 for fracture detection in pediatric wrist trauma X-ray images. Electronics Letters.
+          </p>
+          <p>
+            [Chien et al. 2025] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2025.
+            YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. IEEE Access.
+          </p>
+        </div>
+      </div>
+    </div>
+    
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
