--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -213,12 +213,12 @@
         <h2 class="title is-3">Reference</h2>
         <div class="content has-text-justified">
           <p>
-            [Nagy et al. 2022] Eszter Nagy, Michael Janisch, Franko Hržić, Erich Sorantin, Sebastian Tschauner. 2022.
-            A pediatric wrist trauma X-ray dataset (GRAZPEDWRI-DX) for machine learning. Scientific Data.
+            [Suh et al. 2022] Sungho Suh, Jihun Kim, Paul Lukowic, Yong Oh Lee. 2022.
+            Two-stage generative adversarial networks for binarization of color document images. Pattern Recognition
           </p>
           <p>
-            [Ju et al. 2023] Rui-Yang Ju, Weiming Cai. 2023.
-            Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
+            [Ju et al. 2024] Rui-Yang Ju, Yu-Shian Lin, Yanlin Jin, Chih-Chia Chen, Chun-Tse Chien, Jen-Shiun Chiang. 2024.
+            Three-stage binarization of color document images based on discrete wavelet transform and generative adversarial networks. Knowledge-Based Systems
           </p>
           <p>
             [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
