--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -189,7 +189,7 @@
           <br>
           <p>
             Qualitative comparison of binarization methods on a sample from the DIBCO 2013 dataset: 
-            (a) Input, (b) Ground-Truth, (c) Otsu~\cite{otsu1979threshold}, (d) Niblack~\cite{niblack1985introduction}, (e) Sauvola~\cite{sauvola2000adaptive}, (f) Vo~\cite{vo2018binarization}, (g) He~\cite{he2019deepotsu}, (h) Zhao~\cite{zhao2019document}, (i) Suh~\cite{suh2021cegan}, (j) Ju~\cite{ju2024three}, (k) MFE-GAN.
+            (a) Input, (b) Ground-Truth, (c) Otsu [Otsu 1979], (d) Niblack [Niblack 1985], (e) Sauvola~\cite{sauvola2000adaptive}, (f) Vo~\cite{vo2018binarization}, (g) He~\cite{he2019deepotsu}, (h) Zhao~\cite{zhao2019document}, (i) Suh~\cite{suh2021cegan}, (j) Ju~\cite{ju2024three}, (k) MFE-GAN.
           </p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
@@ -221,12 +221,12 @@
             Three-stage binarization of color document images based on discrete wavelet transform and generative adversarial networks. Knowledge-Based Systems
           </p>
           <p>
-            [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
+            [Otsu 1979] Nobuyuki Otsu. 1979.
+            A Threshold Selection Method from Gray-Level Histograms. IEEE Transactions on Systems, Man, and Cybernetics.
           </p>
           <p>
-            [Chien et al. 2024] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
-            YOLOv9 for fracture detection in pediatric wrist trauma X-ray images. Electronics Letters.
+            [Niblack 1985] Wayne Niblack. 1985.
+            Anintroductiontodigitalimageprocessing. Strandberg Publishing Company.
           </p>
           <p>
             [Chien et al. 2025] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2025.
