--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -189,7 +189,8 @@
           <br>
           <p>
             Qualitative comparison of binarization methods on a sample from the DIBCO 2013 dataset: 
-            (a) Input, (b) Ground-Truth, (c) Otsu [Otsu 1979], (d) Niblack [Niblack 1985], (e) Sauvola~\cite{sauvola2000adaptive}, (f) Vo~\cite{vo2018binarization}, (g) He~\cite{he2019deepotsu}, (h) Zhao~\cite{zhao2019document}, (i) Suh~\cite{suh2021cegan}, (j) Ju~\cite{ju2024three}, (k) MFE-GAN.
+            (a) Input, (b) Ground-Truth, (c) Otsu [Otsu 1979], (d) Niblack [Niblack 1985], (e) Sauvola [Sauvola et al. 2000], 
+            (f) Vo~\cite{vo2018binarization}, (g) He~\cite{he2019deepotsu}, (h) Zhao~\cite{zhao2019document}, (i) Suh [Suh et al. 2022], (j) Ju [Ju et al. 2024], (k) MFE-GAN.
           </p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
@@ -214,7 +215,7 @@
         <div class="content has-text-justified">
           <p>
             [Suh et al. 2022] Sungho Suh, Jihun Kim, Paul Lukowic, Yong Oh Lee. 2022.
-            Two-stage generative adversarial networks for binarization of color document images. Pattern Recognition
+            Two-stage generative adversarial networks for binarization of color document images. Pattern Recognition.
           </p>
           <p>
             [Ju et al. 2024] Rui-Yang Ju, Yu-Shian Lin, Yanlin Jin, Chih-Chia Chen, Chun-Tse Chien, Jen-Shiun Chiang. 2024.
@@ -229,8 +230,16 @@
             Anintroductiontodigitalimageprocessing. Strandberg Publishing Company.
           </p>
           <p>
-            [Chien et al. 2025] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2025.
-            YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. IEEE Access.
+            [Sauvola et al. 2000] Jaakko Sauvola, Matti K. Pietikänen. 2000.
+            Adaptive document image binarization. Pattern Recognition.
+          </p>
+          <p>
+            [Sauvola et al. 2000] Jaakko Sauvola, Matti K. Pietikänen. 2000.
+            Adaptive document image binarization. Pattern Recognition.
+          </p>
+          <p>
+            [Sauvola et al. 2000] Jaakko Sauvola, Matti K. Pietikänen. 2000.
+            Adaptive document image binarization. Pattern Recognition.
           </p>
         </div>
       </div>
