--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -190,7 +190,7 @@
           <p>
             Qualitative comparison of binarization methods on a sample from the DIBCO 2013 dataset: 
             (a) Input, (b) Ground-Truth, (c) Otsu [Otsu 1979], (d) Niblack [Niblack 1985], (e) Sauvola [Sauvola et al. 2000], 
-            (f) Vo~\cite{vo2018binarization}, (g) He~\cite{he2019deepotsu}, (h) Zhao~\cite{zhao2019document}, (i) Suh [Suh et al. 2022], (j) Ju [Ju et al. 2024], (k) MFE-GAN.
+            (f) Vo [Vo et al. 2018], (g) He [He et al. 2019], (h) Zhao~\cite{zhao2019document}, (i) Suh [Suh et al. 2022], (j) Ju [Ju et al. 2024], (k) MFE-GAN.
           </p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
@@ -234,12 +234,12 @@
             Adaptive document image binarization. Pattern Recognition.
           </p>
           <p>
-            [Sauvola et al. 2000] Jaakko Sauvola, Matti K. Pietikänen. 2000.
-            Adaptive document image binarization. Pattern Recognition.
+            [Vo et al. 2018] Quang Nhat Vo, Soo Hyung Kim, Hyung Jeong Yang, Gueesang Lee. 2018.
+            Binarization of degraded document images based on hierarchical deep supervised network. Pattern Recognition.
           </p>
           <p>
-            [Sauvola et al. 2000] Jaakko Sauvola, Matti K. Pietikänen. 2000.
-            Adaptive document image binarization. Pattern Recognition.
+            [He et al. 2019] Sheng He, Lambert Schomaker. 2019.
+            DeepOtsu: Document enhancement and binarization using iterative deep learning. Pattern Recognition.
           </p>
         </div>
       </div>
