--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -190,7 +190,7 @@
           <p>
             Qualitative comparison of binarization methods on a sample from the DIBCO 2013 dataset: 
             (a) Input, (b) Ground-Truth, (c) Otsu [Otsu 1979], (d) Niblack [Niblack 1985], (e) Sauvola [Sauvola et al. 2000], 
-            (f) Vo [Vo et al. 2018], (g) He [He et al. 2019], (h) Zhao~\cite{zhao2019document}, (i) Suh [Suh et al. 2022], (j) Ju [Ju et al. 2024], (k) MFE-GAN.
+            (f) Vo [Vo et al. 2018], (g) He [He et al. 2019], (h) Zhao [Zhao et al. 2019], (i) Suh [Suh et al. 2022], (j) Ju [Ju et al. 2024], (k) MFE-GAN.
           </p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
@@ -240,6 +240,10 @@
           <p>
             [He et al. 2019] Sheng He, Lambert Schomaker. 2019.
             DeepOtsu: Document enhancement and binarization using iterative deep learning. Pattern Recognition.
+          </p>
+          <p>
+            [Zhao et al. 2019] Jinyuan Zhao, Cunzhao Shi, Fuxi Jia, Yanna Wang, Baihua Xiao. 2019.
+            Document image binarization with cascaded generators of conditional generative adversarial networks. Pattern Recognition.
           </p>
         </div>
       </div>
