--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -169,7 +169,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Dataset</h2>
         <div class="content has-text-justified">
-        <img src="./images/da.png" style="width: 80%; display: block; margin: 0 auto;">
+        <img src="./images/data.png" style="width: 80%; display: block; margin: 0 auto;">
           <br>
           <p>
             Examples from the three datasets used in this work: (a) Benchmark, (b) Nabuco, and (c) CMATERdb. 
