--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -218,9 +218,14 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <strong>If you use our dataset, please cite the paper below:</strong>
-  <pre><code>
-
-  </code></pre>
+    <pre><code>
+    @article{ju2025dkds,
+      title={DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization},
+      author={Ju, Rui-Yang and Yamashita, Kohei and Kameko, Hirotaka and Mori, Shinsuke},
+      journal={arXiv preprint arXiv:2511.09117},
+      year={2025}
+    }
+    </code></pre>
     <strong>The following is the citation of the original Kuzushiji dataset; please cite it when using our benchmark dataset:</strong>
   <pre><code>
   『日本古典籍くずし字データセット』 （国文研所蔵／CODH加工） doi:10.20676/00000340      
