--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -156,7 +156,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Pipeline</h2>
         <div class="content has-text-justified">
-        <img src="./images/pipeline.png" style="width: 80%; display: block; margin: 0 auto;">
+        <img src="./images/framework.png" style="width: 80%; display: block; margin: 0 auto;">
           <br>
           <p>
           Our ToonifyGB framework consists of two stages: Stage 1 involves the generation of stylized videos, and Stage 2 focuses on the synthesis of 3D stylized head avatars using Gaussian blendshapes.
