--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -132,8 +132,8 @@
         <div class="content has-text-centered">
           <img src="./images/intro.png" class="center" style="width: 100%;">
           <h5 class="subtitle has-text-justified" style="margin-top: 15px">
-          <strong>Graphs (top) and table (bottom)</strong> compare the average-score metric (ASM) with respect to the total training and inference times among [Suh et al. 2022], [Ju et al. 2024], and the proposed MFE-GAN, evaluated on the Benchmark dataset using NVIDIA GeForce RTX 4090 GPUs.
-          The proposed MFE-GAN, employing U-Net &amp; EfficientNetV2-S as the generator backbone, achieves 16%–79% faster training and 17%–35% shorter inference times compared to the existing methods.
+          Graphs (top) and table (bottom) compare the average-score metric (ASM) with respect to total training and inference times among [Suh et al. 2022], [Ju et al. 2024], and the proposed MFE-GAN (Ours), measured on the Benchmark Dataset using an NVIDIA GeForce RTX 4090 GPU.
+          The proposed MFE-GAN, using U-Net &amp; EfficientNetV2-S as the generator, trains 16% ~ 79% faster than the compared methods, while inference time is reduced by 17% ~ 35%.
           </h5>
         </div>
         <h2 class="title is-3" style="margin-top: 2em;">Abstract</h2>
