--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -190,7 +190,7 @@
           <p>
             Qualitative comparison of binarization methods on a sample from the DIBCO 2013 dataset: 
             (a) Input, (b) Ground-Truth, (c) Otsu [Otsu 1979], (d) Niblack [Niblack 1985], (e) Sauvola [Sauvola et al. 2000], 
-            (f) Vo [Vo et al. 2018], (g) He [He et al. 2019], (h) Zhao [Zhao et al. 2019], (i) Suh [Suh et al. 2022], (j) Ju [Ju et al. 2024], (k) MFE-GAN.
+            (f) Vo [Vo et al. 2018], (g) He [He et al. 2019], (h) Zhao [Zhao et al. 2019], (i) Suh [Suh et al. 2022], (j) Ju [Ju et al. 2024], (k) MFE-GAN (Ours).
           </p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
@@ -198,7 +198,7 @@
           <br>
           <p>
             Qualitative comparison of binarization methods on a sample from the DIBCO 2019 dataset: 
-            (a) Input Image, (b) Ground-Truth, (c) Suh [Suh et al. 2022], (d) Ju [Ju et al. 2024], (e) MFE-GAN.
+            (a) Input Image, (b) Ground-Truth, (c) Suh [Suh et al. 2022], (d) Ju [Ju et al. 2024], (e) MFE-GAN (Ours).
           </p>
         </div>
       </div>
