--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -186,6 +186,22 @@
         </div>
       </div>
     </div>
+
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Verification by the trained Kuzushiji Expert/h2>
+        <div class="content has-text-justified">
+          <img src="./images/verification.png" style="display:block; margin:0 auto; width:80%">
+          <br>
+          <p>
+              The overall workflow for constructing the proposed DKDS dataset includes detection annotations, initial binarization ground-truth generation, verification, and manual correction. 
+              For detection annotations, bounding box information for Kuzushiji characters was sourced from the OCR annotations provided by CODH [国文学研究資料館], while bounding boxes for the seals were recorded during the process of randomly adding them to the Kuzushiji document images.
+              The initial binarization ground-truth was generated following the method of [Ju et al., 2024], and verification was performed by a trained Kuzushiji expert.
+          </p>
+        </div>
+      </div>
+    </div>
+  
   </div>
 </section>
 
