--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -129,7 +129,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
-          <img src="./images/teaser.png">
+          <img src="./images/teaser.png" style="display:block; margin:0 auto; width:80%>
           <h5 class="subtitle has-text-justified" style="margin-top: 15px">
             DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals.
             Based on the dataset, we define two benchmark tracks: (1) Text and Seal Detection, and (2) Document Binarization.
@@ -176,7 +176,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Workflow of The Dataset Construction</h2>
         <div class="content has-text-justified">
-          <img src="./images/workflow.png" style="display:block; margin:0 auto; width:80%">
+          <img src="./images/framework.png" style="display:block; margin:0 auto; width:80%">
           <br>
           <p>
               The overall workflow for constructing the proposed DKDS dataset includes detection annotations, initial binarization ground-truth generation, verification, and manual correction. 
