--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -153,16 +153,16 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Challenges in Track 1: Text and Seal Detection</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
-          <img src="./images/challenge1.png" style="display:block; margin:0 auto; width:80%">
+          <img src="./images/challenge_1.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Text and seal detection serves as a crucial preliminary step for subsequent Kuzushiji OCR and seal analysis. 
-            However, this task is challenging because seals may (a) suffer from ink fading or (b) overlap with Kuzushiji characters or other seals, 
+            However, this task is challenging because seals may suffer from ink fading or overlap with Kuzushiji characters or other seals, 
             which often leads to reduced detection accuracy.
           </p>
         </div>
         <h2 class="title is-3">Challenges in Track 2: Document Binarization</h2>
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
-          <img src="./images/challenge2.png" style="display:block; margin:0 auto; width:80%">
+          <img src="./images/challenge_2.png" style="display:block; margin:0 auto; width:80%">
           <p>
             Document binarization aims to improve the accuracy of downstream OCR systems. 
             In this task, the objective is to remove seals while preserving, or even restoring, Kuzushiji characters as much as possible. 
