--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -252,6 +252,7 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
+    Conference Paper (APSIPA ASC 2025):
     <pre><code>
       @inproceedings{ju2025efficient,
         title={Efficient Generative Adversarial Networks for Color Document Image Enhancement and Binarization Using Multi-Scale Feature Extraction},
@@ -260,6 +261,15 @@
         pages={1898--1903},
         year={2025},
         organization={IEEE}
+      }
+    </code></pre>
+    Journal Paper (Under Review):
+    <pre><code>
+      @article{ju2025mfegan,
+        title={MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction},
+        author={Ju, Rui-Yang and Wong, KokSheik and Jin, Yanlin and Chiang, Jen-Shiun},
+        journal={arXiv preprint arXiv:2512.14114},
+        year={2025}
       }
     </code></pre>
   </div>
