--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -252,6 +252,7 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
+    <div class="column is-full-width">
     <h6 class="subtitle">Conference Paper (APSIPA ASC 2025):</h6>
     <pre><code>
       @inproceedings{ju2025efficient,
@@ -272,7 +273,8 @@
         year={2025}
       }
     </code></pre>
-  </div>
+    </div>
+    </div>
 </section>
   
 <footer class="footer">
