--- a/MFE-GAN/index.html
+++ b/MFE-GAN/index.html
@@ -251,8 +251,7 @@
     
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <div class="column is-full-width">
-      <h6 class="subtitle">Conference Paper (APSIPA ASC 2025):</h6>
+      <strong>Conference Paper (APSIPA ASC 2025):</strong>
       <pre><code>
         @inproceedings{ju2025efficient,
           title={Efficient Generative Adversarial Networks for Color Document Image Enhancement and Binarization Using Multi-Scale Feature Extraction},
@@ -263,7 +262,7 @@
           organization={IEEE}
         }
       </code></pre>
-      <h6 class="subtitle">Journal Paper (Under Review):</h6>
+      <strong>Journal Paper (Under Review):</strong>
       <pre><code>
         @article{ju2025mfegan,
           title={MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction},
@@ -272,7 +271,6 @@
           year={2025}
         }
       </code></pre>
-      </div>
     </div>
 </section>
   
