--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -132,7 +132,7 @@
             training, validation, and test. The sizes are approximately 70%, 20%, and 10% of the original dataset, respectively.
             Specifically, our training set consists of 14,204 images (69.88%), validation set of 4,094 
             images (20.14%), and test set of 2,029 images (9.98%). 
-            In subsequent studies [Ju et al. 2024][Chien et al. 2024][Chien et al. 2025], 
+            In subsequent studies [Chien et al. 2024][Chien et al. 2025][Ju et al. 2026], 
             we all followed this split.
           </p>
         </div>
@@ -165,16 +165,16 @@
             Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
           </p>
           <p>
-            [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
-          </p>
-          <p>
             [Chien et al. 2024] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
             YOLOv9 for fracture detection in pediatric wrist trauma X-ray images. Electronics Letters.
           </p>
           <p>
             [Chien et al. 2025] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2025.
             YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. IEEE Access.
+          </p>
+          <p>
+            [Ju et al. 2026] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2026.
+            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. IET Image Processing.
           </p>
         </div>
       </div>
@@ -221,11 +221,15 @@
   publisher={IEEE}
 }
 
-@article{ju2024pediatric,
+@article{ju2026pediatric,
   title={Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images},
   author={Ju, Rui-Yang and Chien, Chun-Tse and Xieerke, Enkaer and Chiang, Jen-Shiun},
-  journal={arXiv preprint arXiv:2410.01031},
-  year={2024}
+  journal={IET Image Processing},
+  volume={20},
+  number={1},
+  pages={e70269},
+  year={2026},
+  publisher={Wiley Online Library}
 }
 </code></pre>
 
