--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -198,7 +198,8 @@
   volume={13},
   number={1},
   pages={20077},
-  year={2023}
+  year={2023},
+  publisher={Nature Publishing Group UK London}
 }
 
 @article{chien2024yolov9,
