--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -209,7 +209,8 @@
   volume={60},
   number={11},
   pages={e13248},
-  year={2024}
+  year={2024},
+  publisher={Wiley Online Library}
 }
 
 @article{chien2025yolov8,
