--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -59,7 +59,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-3 publication-title" style="font-weight: 600;">ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</h1>
-          <div class="is-size-5 publication-venue has-text-centered" style="margin-top: 0.5em;"><span><strong>IEEE VR 2026 Poster</strong></span></div>
+          <div class="is-size-5 publication-venue" style="margin-top: 0.5em; text-align: center !important;"><span style="display: inline-block;"><strong>IEEE VR 2026 Poster</strong></span></div>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
