--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -60,7 +60,7 @@
         <div class="column has-text-centered">
           <h1 class="title is-3 publication-title" style="font-weight: 600;">ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</h1>
 
-          <div class="is-size-5 publication-authors" style="margin-top: 3em;">
+          <div class="is-size-5 publication-authors" style="margin-bottom: 1em;">
             <span class="author-block">
               <strong>IEEE VR 2026 Poster</strong>
             </span>
