--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars">
-  <meta name="keywords" content="ToonifyGB, StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars, Rui-Yang Ju">
+        content="GlassesGB: Controllable 2D GAN-Based Eyewear Personalization for 3D Gaussian Blendshapes Head Avatars">
+  <meta name="keywords" content="GlassesGB, Controllable 2D GAN-Based Eyewear Personalization for 3D Gaussian Blendshapes Head Avatars, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</title>
+  <title>GlassesGB: Controllable 2D GAN-Based Eyewear Personalization for 3D Gaussian Blendshapes Head Avatars</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -58,7 +58,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-3 publication-title" style="font-weight: 600;">ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</h1>
+          <h1 class="title is-3 publication-title" style="font-weight: 600;">GlassesGB: Controllable 2D GAN-Based Eyewear Personalization for 3D Gaussian Blendshapes Head Avatars</h1>
 
           <div class="is-size-5 publication-authors" style="margin-bottom: 1em;">
             <span class="author-block">
@@ -69,8 +69,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
-              <span>Sheng-Yen Huang</span>,
-              <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>
+              <a href="https://scholar.google.com/citations?user=vb5-3aQAAAAJ&hl">Jen-Shiun Chiang</a>
             </span>
           </div>
 
