--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -75,7 +75,7 @@
 
           <div class="is-size-5 publication-authors" style="margin-top: 1em;">
             <span class="author-block">
-              Graduate Institute of Networking and Multimedia, National Taiwan University
+              Kyoto University, Tamkang University
             </span>
           </div>
 
