--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -83,7 +83,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="pdf\ToonifyGB.pdf"
+                <a href="pdf\GlassesGB.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -92,23 +92,13 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2505.10072"
+                <a href="https://arxiv.org/abs/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
-              <!-- Code Link. -->
-              <span class="link-block">
-                <a href="https://github.com/RuiyangJu/ToonifyGB"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code</span>
-                  </a>
               </span>
             </div>
 
