--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -115,10 +115,9 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-centered">
-          <img src="./images/teaser.png" class="center" style="width: 80%;">
+          <img src="./images/fig_pipeline.png" class="center" style="width: 80%;">
           <h5 class="subtitle has-text-justified" style="margin-top: 15px">
-            We propose an efficient two-stage framework that employs an improved StyleGAN to generate stylized head videos from input video frames and synthesize the corresponding 3D avatars using Gaussian blendshapes. 
-            Our method supports real-time synthesis of stylized avatar animations in styles such as Arcane and Pixar.
+          We introduce a novel framework, named GlassesGB, that generates personalized eyewear via a 2D GAN-based method and jointly renders it as true 3D geometry on a 3D head avatar using 3D Gaussian Blendshapes, rather than as texture overlays.
           </h5>
         </div>
         <h2 class="title is-3" style="margin-top: 2em;">Abstract</h2>
