--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -123,14 +123,11 @@
         <h2 class="title is-3" style="margin-top: 2em;">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-          The introduction of 3D Gaussian blendshapes has enabled the real-time reconstruction of animatable head avatars from monocular video. 
-          Toonify, a StyleGAN-based method, has become widely used for facial image stylization.
-          To extend Toonify for synthesizing diverse stylized 3D head avatars using Gaussian blendshapes, we propose an efficient two-stage framework, ToonifyGB.
-          In Stage 1 (stylized video generation), we adopt an improved StyleGAN to generate the stylized video from the input video frames, which overcomes the limitation of cropping aligned faces at a fixed resolution as preprocessing for normal StyleGAN.
-          This process provides a more stable stylized video, which enables Gaussian blendshapes to better capture the high-frequency details of the video frames, facilitating the synthesis of high-quality animations in the next stage.
-          In Stage 2 (Gaussian blendshapes synthesis), our method learns a stylized neutral head model and a set of expression blendshapes from the generated stylized video.
-          By combining the neutral head model with expression blendshapes, ToonifyGB can efficiently render stylized avatars with arbitrary expressions. 
-          We validate the effectiveness of ToonifyGB on benchmark datasets using two representative styles: Arcane and Pixar.
+          Virtual try-on systems allow users to interactively try different products within Virtual Reality (VR) scenarios.
+          However, most existing VTON methods operate only on predefined eyewear templates and lack support for fine-grained, user-driven customization.
+          While GlassesGAN enables personalized 2D eyewear design, its capability remains limited to 2D image generation. 
+          Motivated by the success of 3D Gaussian Blendshapes in head reconstruction, we integrate these two techniques and propose GlassesGB, a framework that supports customizable eyewear generation for 3D head avatars. 
+          GlassesGB effectively bridges 2D generative customization with 3D head avatar rendering, addressing the challenge in achieving personalized eyewear design for VR applications.
           </p>
         </div>
       </div>
