--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -148,7 +148,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Depth Map Comparison</h2>
         <div class="content has-text-justified">
-        <img src="./images/framework.png" style="width: 80%; display: block; margin: 0 auto;">
+        <img src="./images/fig_depth.png" style="width: 80%; display: block; margin: 0 auto;">
           <br>
           <p>
             We present pseudo-colored depth maps to show geometric details in the eyewear region, where warmer colors denote regions closer to the camera and cooler colors correspond to greater depth. 
