--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -84,12 +84,21 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="pdf\ToonifyGB.pdf"
+                <a href="pdf\2-Page.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>2-Page Paper</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="pdf\Full Paper.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Full Paper</span>
                 </a>
               </span>
               <span class="link-block">
