--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -93,7 +93,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="pdf\Full Paper.pdf"
+                <a href="pdf\Full-Paper.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
