--- a/GlassesGB/index.html
+++ b/GlassesGB/index.html
@@ -166,7 +166,12 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-
+    @article{ju2026glassesgb,
+      title={GlassesGB: Controllable 2D GAN-Based Eyewear Personalization for 3D Gaussian Blendshapes Head Avatars},
+      author={Ju, Rui-Yang and Chiang, Jen-Shiun},
+      journal={arXiv preprint arXiv:2601.17088},
+      year={2026}
+    }
     </code></pre>
   </div>
 </section>
