--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction">
-  <meta name="keywords" content="MFE-GAN, MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction, Rui-Yang Ju">
+        content="Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference">
+  <meta name="keywords" content="RG-KCR, Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MFE-GAN</title>
 
