--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -6,7 +6,7 @@
         content="Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference">
   <meta name="keywords" content="RG-KCR, Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MFE-GAN</title>
+  <title>RG-KCR</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -58,7 +58,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-3 publication-title" style="font-weight: 600;">MFE-GAN: Efficient GAN-based Framework for Document Image Enhancement and Binarization with Multi-scale Feature Extraction</h1>
+          <h1 class="title is-3 publication-title" style="font-weight: 600;">Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
