--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization">
-  <meta name="keywords" content="DKDS, Degraded Kuzushiji Documents with Seals Dataset, Rui-Yang Ju">
+        content="Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference">
+  <meta name="keywords" content="RG-KCR, Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DKDS Dataset</title>
+  <title>Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
