--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -6,7 +6,7 @@
         content="Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference">
   <meta name="keywords" content="RG-KCR, Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference</title>
+  <title>RG-KCR</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
