--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -58,7 +58,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-3 publication-title" style="font-weight: 600;">DKDS: A Benchmark Dataset of <u>D</u>egraded <u>K</u>uzushiji <u>D</u>ocuments with <u>S</u>eals for Detection and Binarization</h1>
+          <h1 class="title is-3 publication-title" style="font-weight: 600;">Restoration-Guided Kuzushiji Character Recognition Framework under Seal Interference</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>,
