--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -86,7 +86,7 @@
               </span>
               <!-- arXiv Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2511.09117"
+                <a href="https://arxiv.org/abs/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -96,7 +96,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/RuiyangJu/DKDS"
+                <a href="https://github.com/RuiyangJu/RG-KCR"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -106,7 +106,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://1drv.ms/f/c/56c255dd1bb9ae9e/EkN7LXxTVopEsmCtYf5p7hYB3SkvocdZyr1O3yRck9We8A?e=xjZ5Cp"
+                <a href="https://1drv.ms/f/c/56c255dd1bb9ae9e/IgDiLBlaev4XQ46AdIStVkE2Ab97A9c0c9QBD5IabfERfuQ"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-download"></i>
