--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -129,10 +129,10 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-justified" style="margin-bottom: 6rem;">
-          <img src="./images/teaser.png" style="display:block; margin:0 auto; width:80%">
+          <img src="./images/fig_pipeline.png" style="display:block; margin:0 auto; width:80%">
           <h5 class="subtitle has-text-justified" style="margin-top: 15px">
-            DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals.
-            Based on the dataset, we define two benchmark tracks: (1) Text and Seal Detection, and (2) Document Binarization.
+            Overview of the proposed restoration-guided Kuzushiji character recognition (RG-KCR) framework, where document restoration is introduced to mitigate seal interference prior to character classification, 
+            consisting of three stages: Kuzushiji character detection (Stage~1), Kuzushiji document restoration (Stage~2), and Kuzushiji character classification (Stage~3).
           </h5>
         </div>
         <h2 class="title is-3">Motivation</h2>
