--- a/RG-KCR/index.html
+++ b/RG-KCR/index.html
@@ -132,7 +132,7 @@
           <img src="./images/fig_pipeline.png" style="display:block; margin:0 auto; width:80%">
           <h5 class="subtitle has-text-justified" style="margin-top: 15px">
             Overview of the proposed restoration-guided Kuzushiji character recognition (RG-KCR) framework, where document restoration is introduced to mitigate seal interference prior to character classification, 
-            consisting of three stages: Kuzushiji character detection (Stage~1), Kuzushiji document restoration (Stage~2), and Kuzushiji character classification (Stage~3).
+            consisting of three stages: Kuzushiji character detection (Stage 1), Kuzushiji document restoration (Stage 2), and Kuzushiji character classification (Stage 3).
           </h5>
         </div>
         <h2 class="title is-3">Motivation</h2>
@@ -142,7 +142,7 @@
           <p>
             To the best of our knowledge, existing Kuzushiji character recognition systems have not explicitly addressed the impact of seal interference, which frequently overlaps with characters and substantially degrades recognition performance.
             Here are the example recognition results produced by different methods under seal interference.
-            The left column shows the input Kuzushiji characters “尚書堂梓”, while the right column presents the corresponding recognition outputs of three methods: Komonjo Camera (Fuminoha) [31], NDLkotenOCR-Lite [1], and Metom [13].
+            The left column shows the input Kuzushiji characters “尚書堂梓”, while the right column presents the corresponding recognition outputs of three methods: Komonjo Camera (Fuminoha) [toppan 2023], NDLkotenOCR-Lite [aoike 2024], and Metom [imajuku 2024].
             The first row displays the raw document as input, whereas the second row shows the recognition results after applying our proposed document restoration method.
           </p>
         </div>
@@ -220,12 +220,13 @@
         <!-- Prop. -->
         <div class="content has-text-justified">
           <p>
-            [Clanuwat et al. 2021] Clanuwat, Tarin, and Asanobu Kitamoto. 
-            `miwo' AI Kuzushiji Recognition Application for Document Examination.
-            Proceeding of IPSJ Humanities and Computer Symposium. 2021.
+            [toppan 2023] TOPPAN Inc., ふみのは (Fuminoha): 古文書カメラ (Komonjo Camera) (2023), https://camera.fuminoha.jp.
           </p>
           <p>
-            [国文学研究資料館] 国文学研究資料館. 日本古典籍くずし字データセット. https://doi.org/10.20676/00000340.
+            [aoike 2024] Aoike, T., Development of ndlkotenocr-lite, a lightweight ocr that runs at high speed in a cpu environment. In: IPSJ SIG Computers and the Humanities Symposium. pp. 181–186 (2024).
+          </p>
+          <p>
+            [imajuku 2024] Imajuku, Y., Clanuwat, T.: Metom (2024), https://huggingface.co/SakanaAI/Metom.
           </p>
         </div>
       </div>
